Updete JH - html other pages

--- a/JH/index.html
+++ b/JH/index.html
@@ -108,7 +108,7 @@
         <div class="top_title">
             <h3>正豪嚴選 / <span>THE CAREFULLY SELECTED</span></h3>
         </div>
-        <div class="ContentsBox">
+        <div class="ContentsBox world_map">
             <ul class="service_list clearfix">
                 <li>
                     <img src="images/service_list_img_01.png">
