--- a/JH/product-02.html
+++ b/JH/product-02.html
@@ -88,7 +88,7 @@ $(document).ready(function() {
                 <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
                 <h4 class="sub_title">恬靜鄉村風</h4>
                 <div class="box-none">
-                <p class="info">木頭細緻天然紋理，搭配沉穩霧面質感漆面，襯托出法式獨有的知性慵懶家居氛圍。</p>
+                <p class="info">北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造自然質樸、不造作的美式鄉村風格。</p>
                 <ul class="menu_type">
                     <li class="type_title">
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
@@ -96,15 +96,15 @@ $(document).ready(function() {
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
                             <li><p><a class="btn_in" href="product-02.html">恬靜鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
-                            <li><p><a href="product-04.html">英式田園風風</a></p></li>
-                            <li><p><a href="product-05.html">匠心懷舊系列</a></p></li>
-                            <li><p><a href="product-06.html">經典黑白系列</a></p></li>
+                            <li><p><a href="product-04.html">英式田園風</a></p></li>
+                            <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
+                            <li><p><a href="product-06.html">經典黑白風</a></p></li>
                             <li><p><a href="product-07.html">現代北歐風</a></p></li>
-                            <li><p><a href="product-08.html">工業穀倉系列</a></p></li>
+                            <li><p><a href="product-08.html">穀倉工業風</a></p></li>
                         </ul>
                     </li>
                     <li class="type_title">
-                        <h5 class="none"><span>實木門框</span></h5>
+                        <h5 class="none"><a href="product-doorframe.html"><span>實木門框</span></a></h5>
                     </li>
                 </ul>
                 </div>
