--- a/JH/product-07.html
+++ b/JH/product-07.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 細緻沉穩風</title>
+<title>正豪木業 - 產品介紹 - 現代北歐風</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -81,25 +81,25 @@ $(document).ready(function() {
 </header>
 
 <main class="main_contents inside_contents produc_box">
-    <div class="bannerBox broduct_banner_01"></div>
+    <div class="bannerBox broduct_banner_07"></div>
     <section class="ContentsBox clearfix">
         <div class="produc_left_menu">
             <div class="for_mob_box">
                 <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
-                <h4 class="sub_title">細緻沉穩風</h4>
+                <h4 class="sub_title">現代北歐風</h4>
                 <div class="box-none">
-                <p class="info">木頭細緻天然紋理，搭配沉穩霧面質感漆面，襯托出法式獨有的知性慵懶家居氛圍。</p>
+                <p class="info">北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間。 </p>
                 <ul class="menu_type">
                     <li class="type_title">
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
                         <ul class="the_sub_menu" style="display: block;">
-                            <li><p><a class="btn_in" href="product-01.html">細緻沉穩風</a></p></li>
+                            <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
                             <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a href="product-04.html">英式田園風</a></p></li>
                             <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
                             <li><p><a href="product-06.html">經典黑白風</a></p></li>
-                            <li><p><a href="product-07.html">現代北歐風</a></p></li>
+                            <li><p><a class="btn_in" href="product-07.html">現代北歐風</a></p></li>
                             <li><p><a href="product-08.html">穀倉工業風</a></p></li>
                         </ul>
                     </li>
@@ -114,50 +114,51 @@ $(document).ready(function() {
         <ul class="produc_right_deta">
             <li>
                 <a class="popup-link" href="#popup-product-1">
-                    <img src="images/product/p01/1-R21-12.jpg" alt="R21-12-知性藍色">
-                    <p class="info">R21-12-知性藍色</p>
+                    <img src="images/product/p07/1-R27-03.jpg" alt="R27-03-仿古米灰">
+                    <p class="info">R27-03-仿古米灰</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-2">
-                    <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性灰藍色">
-                    <p class="info">R21-12-知性灰藍色</p>
+                    <img src="images/product/p07/2-R27-03.jpg" alt="R27-03-仿古鉑灰">
+                    <p class="info">R27-03-仿古鉑灰</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-3">
-                    <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
-                    <p class="info">R21-12-珍珠灰色</p>
+                    <img src="images/product/p07/3-R05-01.jpg" alt="R05-01-原木色">
+                    <p class="info">R05-01-原木色</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-4">
-                    <img src="images/product/p01/4-R21-12.jpg" alt="R21-12-鐵刀黑色">
-                    <p class="info">R21-12-鐵刀黑色</p>
+                    <img src="images/product/p07/4-R24-03.jpg" alt="R24-03-熔岩洗白">
+                    <p class="info">R24-03-熔岩洗白</p>
                 </a>
             </li>
+
             <li>
                 <a class="popup-link" href="#popup-product-5">
-                    <img src="images/product/p01/5-R21-12.jpg" alt="R21-12-鐵灰色">
-                    <p class="info">R21-12-鐵灰色</p>
+                    <img src="images/product/p07/5-R22-09.jpg" alt="R22-09-柚木本色">
+                    <p class="info">R22-09-柚木本色</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-6">
-                    <img src="images/product/p01/6-R20-12.jpg" alt="R20-12-珍珠灰色">
-                    <p class="info">R20-12-珍珠灰色</p>
+                    <img src="images/product/p07/6-R34-01.jpg" alt="R34-01-水洗綠">
+                    <p class="info">R34-01-水洗綠</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-7">
-                    <img src="images/product/p01/7-R29-12.jpg" alt="R29-12-知性深紅色">
-                    <p class="info">R29-12-知性深紅色</p>
+                    <img src="images/product/p07/7-R24-01.jpg" alt="R24-01-鉑灰色">
+                    <p class="info">R24-01-鉑灰色</p>
                 </a>
             </li>
             <li>
                 <a class="popup-link" href="#popup-product-8">
-                    <img src="images/product/p01/8-R29-12.jpg" alt="R29-12-鐵刀黑色">
-                    <p class="info">R29-12-鐵刀黑色</p>
+                    <img src="images/product/p07/8-R24-03.jpg" alt="R24-03-白橡原木色">
+                    <p class="info">R24-03-白橡原木色</p>
                 </a>
             </li>
         </ul>
@@ -193,6 +194,7 @@ $(document).ready(function() {
         </div>
     </section>
 </main>
+
 <footer class="FooterBox">
     <div class="ContentsBox">
         <ul class="info clearfix">
@@ -220,25 +222,22 @@ $(document).ready(function() {
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/1-R21-12.jpg" alt="21-12-知性灰藍色">
+                <img src="images/product/p07/1-R27-03.jpg" alt="R27-03-仿古米灰">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R21-12-知性藍色<br>
-                    樹種：歐洲雲杉<br>
+                    型號：R27-03-仿古米灰<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門保留原始紋路的同時卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
-                    ◆ 100% 台灣純手工製造，絕非假他人代工，品質由我們嚴格控管<br>
-                    ◆ 經數道手工研磨讓木門邊角圓潤不傷手<br>
-                    ◆ 絕非假他人代工，所有品質由我們嚴格控管<br>
+                    ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
-                    ◆ 選用歐美地區計畫型植林樹種，讓木門好環保<br>
                     ◆ 選用合格塗料，經SGS檢測無重金屬檢出<br>
                     ◆ 選用安全木膠，通過日本食品衛生無毒證明<br>
                     ◆ 甲醛檢測結果優於歐盟標準
@@ -261,19 +260,19 @@ $(document).ready(function() {
     <div id="popup-product-2" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性藍色">
+                <img src="images/product/p07/2-R27-03.jpg" alt="R27-03-仿古鉑灰">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R21-12-知性灰藍色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R27-03-仿古鉑灰<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -299,19 +298,19 @@ $(document).ready(function() {
     <div id="popup-product-3" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
+                <img src="images/product/p07/3-R05-01.jpg" alt="R05-01-原木色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R21-12-珍珠灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R05-01-原木色<br>
+                    樹種：北美白栓木/梣木(ASH)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -337,19 +336,19 @@ $(document).ready(function() {
     <div id="popup-product-4" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/4-R21-12.jpg" alt="R21-12-鐵刀黑色">
+                 <img src="images/product/p07/4-R24-03.jpg" alt="R24-03-熔岩洗白">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R21-12-鐵刀黑色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R24-03-熔岩洗白<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -375,19 +374,19 @@ $(document).ready(function() {
     <div id="popup-product-5" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/5-R21-12.jpg" alt="R21-12-鐵灰色">
+                <img src="images/product/p07/5-R22-09.jpg" alt="R22-09-柚木本色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R21-12-鐵灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R22-09-柚木本色<br>
+                    樹種：緬甸柚木(TEAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -413,19 +412,19 @@ $(document).ready(function() {
     <div id="popup-product-6" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/6-R20-12.jpg" alt="R20-12-珍珠灰色">
+                <img src="images/product/p07/6-R34-01.jpg" alt="R34-01-水洗綠">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R20-12-珍珠灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R34-01-水洗綠<br>
+                    樹種：北美白栓木/梣木(ASH)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -451,19 +450,19 @@ $(document).ready(function() {
     <div id="popup-product-7" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/7-R29-12.jpg" alt="R29-12-知性深紅色">
+                <img src="images/product/p07/7-R24-01.jpg" alt="R24-01-鉑灰色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R29-12-知性深紅色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R24-01-鉑灰色<br>
+                    樹種：北美白栓木/梣木(ASH)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -489,19 +488,19 @@ $(document).ready(function() {
     <div id="popup-product-8" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/8-R29-12.jpg" alt="R29-12-鐵刀黑色">
+                <img src="images/product/p07/8-R24-03.jpg" alt="R24-03-白橡原木色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/現代北歐風</h3>
                 <p class="p_center">
-                    型號：R29-12-鐵刀黑色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R24-03-白橡原木色<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
