--- a/JH/product-doorframe.html
+++ b/JH/product-doorframe.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 細緻沉穩風</title>
+<title>正豪木業 - 產品介紹 - 實木門框</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -81,19 +81,19 @@ $(document).ready(function() {
 </header>
 
 <main class="main_contents inside_contents produc_box">
-    <div class="bannerBox broduct_banner_01"></div>
+    <div class="bannerBox broduct_banner_09"></div>
     <section class="ContentsBox clearfix">
         <div class="produc_left_menu">
             <div class="for_mob_box">
                 <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
-                <h4 class="sub_title">細緻沉穩風</h4>
+                <h4 class="sub_title">實木門框</h4>
                 <div class="box-none">
-                <p class="info">木頭細緻天然紋理，搭配沉穩霧面質感漆面，襯托出法式獨有的知性慵懶家居氛圍。</p>
+                <p class="info">可搭配房間門的樹種及特色漆面做整體規劃設計，此為正豪獨有的服務特色。 </p>
                 <ul class="menu_type">
                     <li class="type_title">
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
-                        <ul class="the_sub_menu" style="display: block;">
-                            <li><p><a class="btn_in" href="product-01.html">細緻沉穩風</a></p></li>
+                        <ul class="the_sub_menu">
+                            <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
                             <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a href="product-04.html">英式田園風</a></p></li>
@@ -111,56 +111,32 @@ $(document).ready(function() {
                 <a class="more"></a>
             </div>
         </div>
-        <ul class="produc_right_deta">
-            <li>
-                <a class="popup-link" href="#popup-product-1">
-                    <img src="images/product/p01/1-R21-12.jpg" alt="R21-12-知性藍色">
-                    <p class="info">R21-12-知性藍色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-2">
-                    <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性灰藍色">
-                    <p class="info">R21-12-知性灰藍色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-3">
-                    <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
-                    <p class="info">R21-12-珍珠灰色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-4">
-                    <img src="images/product/p01/4-R21-12.jpg" alt="R21-12-鐵刀黑色">
-                    <p class="info">R21-12-鐵刀黑色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-5">
-                    <img src="images/product/p01/5-R21-12.jpg" alt="R21-12-鐵灰色">
-                    <p class="info">R21-12-鐵灰色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-6">
-                    <img src="images/product/p01/6-R20-12.jpg" alt="R20-12-珍珠灰色">
-                    <p class="info">R20-12-珍珠灰色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-7">
-                    <img src="images/product/p01/7-R29-12.jpg" alt="R29-12-知性深紅色">
-                    <p class="info">R29-12-知性深紅色</p>
-                </a>
-            </li>
-            <li>
-                <a class="popup-link" href="#popup-product-8">
-                    <img src="images/product/p01/8-R29-12.jpg" alt="R29-12-鐵刀黑色">
-                    <p class="info">R29-12-鐵刀黑色</p>
-                </a>
-            </li>
-        </ul>
+        <div class="produc_right_deta doorframe_infoBox">
+            <h3 class="main_title">實木門框 / <span>DOOR FRAME</span></h3>
+            <h4 class="sub_title">實木門框介紹</h4>
+            <div class="photo">
+                <img src="images/product/p09/doorframe_line_info.jpg" alt="實木門框介紹">
+            </div>
+            <h4 class="sub_title">實木門框造型</h4>
+            <ul class="doorframe_style">
+                <li>
+                    <img src="images/product/p09/doorframe_01.jpg" alt="實木門框造型 型式(一)">
+                    <p>型式(一)</p>
+                </li>
+                <li>
+                    <img src="images/product/p09/doorframe_02.jpg" alt="實木門框造型 型式(二)">
+                    <p>型式(二)</p>
+                </li>
+                <li>
+                    <img src="images/product/p09/doorframe_03.jpg" alt="實木門框造型 型式(三)">
+                    <p>型式(三)</p>
+                </li>
+                <li>
+                    <img src="images/product/p09/doorframe_04.jpg" alt="實木門框造型 型式(四)">
+                    <p>型式(四)</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="doorPanel_notice">
         <div class="ContentsBox clearfix">
@@ -193,6 +169,7 @@ $(document).ready(function() {
         </div>
     </section>
 </main>
+
 <footer class="FooterBox">
     <div class="ContentsBox">
         <ul class="info clearfix">
@@ -220,12 +197,12 @@ $(document).ready(function() {
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/1-R21-12.jpg" alt="21-12-知性灰藍色">
+                <img src="images/product/p08/1-R25-13.jpg" alt="R25-13-粗獷深柚色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R21-12-知性藍色<br>
+                    型號：R25-13-粗獷深柚色<br>
                     樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
@@ -236,9 +213,7 @@ $(document).ready(function() {
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，絕非假他人代工，品質由我們嚴格控管<br>
                     ◆ 經數道手工研磨讓木門邊角圓潤不傷手<br>
-                    ◆ 絕非假他人代工，所有品質由我們嚴格控管<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
-                    ◆ 選用歐美地區計畫型植林樹種，讓木門好環保<br>
                     ◆ 選用合格塗料，經SGS檢測無重金屬檢出<br>
                     ◆ 選用安全木膠，通過日本食品衛生無毒證明<br>
                     ◆ 甲醛檢測結果優於歐盟標準
@@ -261,19 +236,19 @@ $(document).ready(function() {
     <div id="popup-product-2" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性藍色">
+                <img src="images/product/p08/2-R25-04.jpg" alt="R25-04-粗獷綠色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R21-12-知性灰藍色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R25-13-粗獷深柚色<br>
+                    樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門同時保留原始紋路卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -299,19 +274,19 @@ $(document).ready(function() {
     <div id="popup-product-3" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
+                <img src="images/product/p08/3-R26-04.jpg" alt="R26-04-粗獷藍色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R21-12-珍珠灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R26-04-粗獷藍色<br>
+                    樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門同時保留原始紋路卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -337,19 +312,19 @@ $(document).ready(function() {
     <div id="popup-product-4" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/4-R21-12.jpg" alt="R21-12-鐵刀黑色">
+                 <img src="images/product/p08/4-R26-04.jpg" alt="R25-04-粗獷棕色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R21-12-鐵刀黑色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R26-04-粗獷棕色<br>
+                    樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門同時保留原始紋路卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -375,19 +350,19 @@ $(document).ready(function() {
     <div id="popup-product-5" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/5-R21-12.jpg" alt="R21-12-鐵灰色">
+                <img src="images/product/p08/5-R28-03.jpg" alt="R28-03-粗獷紅色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R21-12-鐵灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R28-03-粗獷紅色<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門同時保留原始紋路卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -413,19 +388,19 @@ $(document).ready(function() {
     <div id="popup-product-6" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/6-R20-12.jpg" alt="R20-12-珍珠灰色">
+                <img src="images/product/p08/6-R28-03.jpg" alt="R25-03-粗獷原木色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R20-12-珍珠灰色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R28-03-粗獷原木色<br>
+                    樹種：北美白橡木(WHITE OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門同時保留原始紋路卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -451,19 +426,19 @@ $(document).ready(function() {
     <div id="popup-product-7" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/7-R29-12.jpg" alt="R29-12-知性深紅色">
+                <img src="images/product/p08/7-R39-13.jpg" alt="R39-13-原木色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R29-12-知性深紅色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R39-13-原木色<br>
+                    樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 無添加任何色漆，嚴格挑選最乾淨漂亮板材，讓特色木節自然呈現，保留歐洲雲杉最真實的樣貌，搭配黑色穀倉門懸掛五金，展現簡潔大方的工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
@@ -489,19 +464,19 @@ $(document).ready(function() {
     <div id="popup-product-8" class="white-popup popup-L mfp-hide">
         <div class="product-infoBox clearfix">
             <div class="left_photo">
-                <img src="images/product/p01/8-R29-12.jpg" alt="R29-12-鐵刀黑色">
+                <img src="images/product/p08/8-R28-13.jpg" alt="R28-13-原木色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R29-12-鐵刀黑色<br>
-                    樹種：柳安木(美蘭地)<br>
+                    型號：R28-13-原木色<br>
+                    樹種：歐洲雲杉<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
+                    ◆ 無添加任何色漆，嚴格挑選最乾淨漂亮板材，讓特色木節自然呈現，保留歐洲雲杉最真實的樣貌，搭配黑色穀倉門懸掛五金，展現簡潔大方的工業風格<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，經數道手工研磨讓木門邊角圓潤不傷手<br>
                     ◆ 運用40年純熟工法，使木門不易變形、不解體<br>
