--- a/JH/index.html
+++ b/JH/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 
 <!-- jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
 
 <!-- FlexSlider -->
@@ -62,7 +62,7 @@
             <li><h3><a href="contact.html"">聯絡我們  ｜  CONTACT</a></h3></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
