change the link

--- a/JH/life_style.html
+++ b/JH/life_style.html
@@ -75,51 +75,51 @@
             <h3 class="main_title">風格選品 / <span>LIFE STYLE</span></h3>
             <ul class="clearfix">
                 <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-01.html">
                         <img src="images/life_style/l_01.jpg" alt="細緻沉穩風">
+                        <h2 class="style_title">細緻沉穩風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="product-02.html">
+                        <img src="images/life_style/l_02.jpg" alt="恬靜鄉村風">
                         <h2 class="style_title">恬靜鄉村風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
-                        <img src="images/life_style/l_02.jpg" alt="玩色鄉村風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
-                    </a>
-                </li>
-                <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-03.html">
                         <img src="images/life_style/l_03.jpg" alt="雋永經典風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                        <h2 class="style_title">雋永經典風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-04.html#">
                         <img src="images/life_style/l_04.jpg" alt="英式田園風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                        <h2 class="style_title">英式田園風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-05.html">
                         <img src="images/life_style/l_05.jpg" alt="匠心懷舊風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                        <h2 class="style_title">匠心懷舊風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-06.html">
                         <img src="images/life_style/l_06.jpg" alt="經典黑白風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                        <h2 class="style_title">經典黑白風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
+                    <a class="hovereffect" href="product-07.html">
                         <img src="images/life_style/l_07.jpg" alt="現代北歐風">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                        <h2 class="style_title">現代北歐風</h2>
                     </a>
                 </li>
                 <li>
-                    <a class="hovereffect" href="#">
-                        <img src="images/life_style/l_08.jpg" alt="工業穀倉門">
-                        <h2 class="style_title">恬靜鄉村風</h2>
+                    <a class="hovereffect" href="product-08.html">
+                        <img src="images/life_style/l_08.jpg" alt="穀倉工業風">
+                        <h2 class="style_title">穀倉工業風</h2>
                     </a>
                 </li>
             </ul>
