Updete html - add s_sideMenu

--- a/JH/about.html
+++ b/JH/about.html
@@ -43,7 +43,7 @@
             <li><h3><a href="contact.html"">聯絡我們  ｜  CONTACT</a></h3></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
@@ -70,8 +70,20 @@
 
 <main class="main_contents inside_contents">
     <div class="bannerBox banner_01"></div>
+    <section class="s_sideMenu">
+        <h3 class="title">關於我們 /<br>
+        <span>ABOUT US</span></h3>
+        <ul class="golink_list">
+            <li><p><a class="inside_go01">公司簡介</a></p></li>
+            <li><p><a class="inside_go02">核心能力</a></p></li>
+            <li><p><a class="inside_go03">選材來源</a></p></li>
+            <li><p><a class="inside_go04">原料把關</a></p></li>
+            <li><p><a class="inside_go05">特色漆面</a></p></li>
+            <li><p><a class="inside_go06">獨門工法</a></p></li>
+        </ul>
+    </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_01">
             <h3 class="main_title">公司簡介 / <span>COMPANY INTRODUCTION</span></h3>
             <h4 class="sub_title">優良的木材製品，來自於持續追求製程品質的團隊”</h4>
             <p class="info">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。<br>
@@ -84,7 +96,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_02">
             <h3 class="main_title">核心能力 / <span>CORE COMPETENCY</span></h3>
             <h4 class="sub_title">以精巧做工與誠信原則提供產品與服務，<br> 歡迎與我們一同研發全系列實木門”</h4>
             <ul class="core_list">
@@ -110,7 +122,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_03">
             <h3 class="main_title">選材來源 / <span>COUNTRY OF ORIGIN</span></h3>
             <div class="photo">
                 <img src="images/about/img_03.png" alt="木材來源">
@@ -200,7 +212,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_04">
             <h3 class="main_title">原料把關 / <span>SELECTION OF INGREDIENTS</span></h3>
             <div class="photo">
                 <img src="images/about/img_04.png" alt="原料把關">
@@ -217,7 +229,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_05">
             <h3 class="main_title">特色漆面 / <span>FEATURES PAINT</span></h3>
             <div class="photo">
                 <img src="images/about/img_05.png" alt="特色漆面">
@@ -233,7 +245,7 @@
         </div>
     </section>
     <section class="ContentsBox">
-        <div class="aboutus_box">
+        <div class="aboutus_box" id="inside_goto_06">
             <h3 class="main_title">獨門工法 / <span>EXCLUSIVE TECHNOLOGY</span></h3>
             <div class="photo">
                 <img src="images/about/img_06.png" alt="複合實木工法">
