--- a/JH/faq.html
+++ b/JH/faq.html
@@ -43,7 +43,7 @@
             <li><h3><a href="contact.html"">聯絡我們  ｜  CONTACT</a></h3></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
@@ -70,8 +70,19 @@
 
 <main class="main_contents inside_contents">
     <div class="bannerBox banner_05"></div>
+    <section class="s_sideMenu">
+        <h3 class="title">木門問答集 /<br>
+        <span>WOOD DOOR FAQ</span></h3>
+        <ul class="golink_list">
+            <li><p><a class="inside_go01">木門如何保養</a></p></li>
+            <li><p><a class="inside_go02">木門隔音效果</a></p></li>
+            <li><p><a class="inside_go03">木門蟲害防範</a></p></li>
+            <li><p><a class="inside_go04">木門為何要上漆</a></p></li>
+            <li><p><a class="inside_go05">木材天然色澤差異</a></p></li>
+        </ul>
+    </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box faq_box">
+        <div class="aboutus_box faq_box" id="inside_goto_01">
             <h3 class="main_title blue_title">木門如何保養 </span></h3>
             <div class="photo">
                 <img src="images/faq/img_01.png" alt="關於保養這件事">
@@ -87,7 +98,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box faq_box">
+        <div class="aboutus_box faq_box" id="inside_goto_02">
             <h3 class="main_title blue_title">木門隔音效果</h3>
             <p class="info l_h44">若您很在意房門內的談話容易穿透房門，造成家人、朋友間互相干擾，選擇木門作為房間門會是您的最佳選擇。<br>
             木門隔音效果較其他材質佳主要有3個關鍵因素: </p>
@@ -99,7 +110,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box faq_box">
+        <div class="aboutus_box faq_box" id="inside_goto_03">
             <div class="photo">
                 <img src="images/faq/img_02.png" alt="我們的木材本身無蟲害!">
             </div>
@@ -111,7 +122,7 @@
         </div>
     </section>
     <section class="ContentsBox line_dotted">
-        <div class="aboutus_box faq_box">
+        <div class="aboutus_box faq_box" id="inside_goto_04">
             <h3 class="main_title blue_title">木門為何要上漆</h3>
             <p class="info l_h44">很多客戶因為擔心塗料或接著劑會有甲醛、重金屬的危害，選擇只推護木油保護木門，或甚至不上任何漆料。<br>
                 但您知道護木油容易讓木門發霉，反而保護不了木門嗎?<br>
@@ -122,7 +133,7 @@
         </div>
     </section>
     <section class="ContentsBox">
-        <div class="aboutus_box faq_box">
+        <div class="aboutus_box faq_box" id="inside_goto_05">
             <h3 class="main_title blue_title">木材天然色澤差異</h3>
             <div class="photo">
                 <img src="images/faq/img_03.png" alt="木材色澤差異圖解">
