change iishop html & css

--- a/ishop-booking/web.html
+++ b/ishop-booking/web.html
@@ -5,10 +5,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
+
   <!-- <link rel="icon" href="../../favicon.ico"> -->
   <link rel="icon" href="null">
   <meta property="og:description" content="">
@@ -277,56 +281,38 @@
 
 <body>
 
-  <div class="container">
-    <div class="header">
+  <div class="shop_contents">
+    <!-- <div class="header">
       <div class="wrap">
         <div class="newLogo">
           <a href="https://www.iiot.io">
             <img class="iiot-logo-image" src="https://userfiles-dev.iiot.io/businesses/p8WGlOzZ6/U_NLM0gEw0z">
-            <!-- <img class="iiot-logo-image" src="https://a.staticaa.com/images/logo/aa-logo.png"> -->
           </a>
         </div>
       </div>
-      <!-- <div class="btn-group align-right">
-        <button type="button" class="btn btn-default" onclick="setLanguage('ja')">日本語</button>
-        <button type="button" class="btn btn-default" onclick="setLanguage('en')">English</button>
-        <button type="button" class="btn btn-default" onclick="setLanguage('tw')">中文</button>
-      </div> -->
-    </div>
+    </div> -->
 
     <!-- 新增nav bar -->
-    <div class="row">
-      <div class="col-md-offset-3 col-md-6 col-sm-12">
+    <div class="top_step_contents clearfix">
+      <div class="">
         <div class="stepwizard align-center">
           <div class="stepwizard-row setup-panel">
             <div class="stepwizard-step">
               <a href="#" type="button" class="btn btn-warning btn-circle" disabled="disabled">1</a>
+              <p class="">Booking Form</p>
             </div>
             <div class="stepwizard-step">
               <a href="#" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
+              <p class="">Add ons</p>
             </div>
             <div class="stepwizard-step">
               <a href="#" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
+              <p class="">Confirm</p>
             </div>
             <div class="stepwizard-step">
               <a href="#" type="button" class="btn btn-default btn-circle" disabled="disabled">4</a>
+              <p class="">Payment</p>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-offset-3 col-md-6 col-sm-12">
-        <div class="row text-center">
-          <div class="col-md-3 col-sm-3 col-xs-3">
-            <p class="">Booking Form</p>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-3">
-            <p class="">Add ons</p>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-3">
-            <p class="">Confirm</p>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-3">
-            <p class="">Payment</p>
           </div>
         </div>
       </div>
@@ -341,56 +327,36 @@
     </div>
 
     <div class="orderpreview">
-      <div class="well">
-        <h3>
-          お申込内容
-        </h3>
-        <div class="">
-          <p>レンタル期間</p>
+      <div class="wellbox">
+        <h3 class="top_title"><span>お申込内容</span></h3>
+        <div class="a_list clearfix">
+          <p class="left_item">レンタル期間</p>
           <p id="order-date"></p>
         </div>
-        <div>
-          <p>
-            渡航エリア
-          </p>
-          <p>
-            Asia <br> 韓國
-          </p>
-
+        <div class="a_list clearfix">
+          <p class="left_item">渡航エリア</p>
+          <p>Asia <br> 韓國</p>
         </div>
-        <div>
-          <p>
-            受取方法
-          </p>
+        <div class="a_list clearfix">
+          <p class="left_item">受取方法</p>
           <p>未選択です</p>
         </div>
-        <div>
-          <p>
-            jetfi
-            レンタル台数
-          </p>
+        <div class="a_list clearfix">
+          <p class="left_item">jetfi レンタル台数</p>
           <p>未選択です</p>
         </div>
-
-        <div>
-          <p>
-            通信プラン
-          </p>
+        <div class="a_list clearfix">
+          <p class="left_item">通信プラン</p>
           <p>未選択です</p>
         </div>
-        <div>
-          <p>
-            キャンペーン値引き
-          </p>
+        <div class="a_list clearfix">
+          <p class="left_item">キャンペーン値引き</p>
           <p>-500円</p>
-          <div>
-            <p>
-              合計金額(税込)
-            </p>
-            <p>18,200 円</p>
-          </div>
         </div>
-
+        <div class="a_list clearfix">
+          <p class="left_item">合計金額(税込)</p>
+          <p>18,200 円</p>
+        </div>
       </div>
     </div>
 
